--- a/phishing_detector.ipynb
+++ b/phishing_detector.ipynb
@@ -56,7 +56,7 @@
         "    words = [word for word in words if word not in stop_words]\n",
         "    return ' '.join(words)\n",
         "\n",
-        "# Create a larger dummy dataset\n",
+        "# dataset\n",
         "data = {\n",
         "    'email_content': [\n",
         "        'Urgent: Update your bank account details now!',\n",
